Add Redis driver

--- a/cmd/master_node/config.yaml
+++ b/cmd/master_node/config.yaml
@@ -3,3 +3,8 @@ portRegistration: "9091"
 verbosity: "info"
 traceOutputFolder: "data"
 placementPolicy: "kubernetes"
+
+redis:
+  address: "127.0.0.1:6379"
+  password: ""
+  db: 0
