Add data plane deregistration

--- a/cmd/data_plane/config.yaml
+++ b/cmd/data_plane/config.yaml
@@ -2,6 +2,6 @@ controlPlaneIp: "localhost"
 controlPlanePort: "9090"
 portProxy: "8080"
 portGRPC: "8081"
-verbosity: "info"
+verbosity: "trace"
 traceOutputFolder: "data"
 loadBalancingPolicy: "knative"
