--- a/cmd/worker_node/config.yaml
+++ b/cmd/worker_node/config.yaml
@@ -3,4 +3,4 @@ controlPlanePort: "9090"
 port: "10010"
 verbosity: "info"
 criPath: "/run/containerd/containerd.sock"
-cniConfigPath: "../../configs/cni.conf"
+cniConfigPath: "configs/cni.conf"
