Choose in configuration file if we want persistence or not

--- a/cmd/master_node/config.yaml
+++ b/cmd/master_node/config.yaml
@@ -3,6 +3,7 @@ portRegistration: "9091"
 verbosity: "trace"
 traceOutputFolder: "data"
 placementPolicy: "kubernetes"
+persistence: false
 
 redis:
   address: "127.0.0.1:6379"
