--- a/cmd/master_node/config_cluster.yaml
+++ b/cmd/master_node/config_cluster.yaml
@@ -5,6 +5,10 @@ traceOutputFolder: "data"
 placementPolicy: "kubernetes"
 persistence: true
 
+profiler:
+  enable: true
+  mutex: false
+
 redis:
   address: "10.0.1.1:6379"
   password: ""
