Implement dataplane failure detection | Extract control_plane and api handler

--- a/cmd/master_node/config.yaml
+++ b/cmd/master_node/config.yaml
@@ -4,6 +4,7 @@ verbosity: "trace"
 traceOutputFolder: "data"
 placementPolicy: "kubernetes"
 persistence: false
+reconstruct: true
 
 profiler:
   enable: true
