Enable image prefetching in configuration

--- a/cmd/worker_node/config_cluster.yaml
+++ b/cmd/worker_node/config_cluster.yaml
@@ -4,3 +4,4 @@ port: "10010"
 verbosity: "trace"
 criPath: "/run/containerd/containerd.sock"
 cniConfigPath: "../../configs/cni.conf"
+prefetchImage: true
