--- a/cmd/master_node/config.yaml
+++ b/cmd/master_node/config.yaml
@@ -3,8 +3,8 @@ portRegistration: "9091"
 verbosity: "trace"
 traceOutputFolder: "data"
 placementPolicy: "kubernetes"
-persistence: false
-reconstruct: true
+persistence: true
+reconstruct: false
 
 profiler:
   enable: true
