Improve reconstruction state and move cleaner.go to tools

--- a/cmd/master_node/config.yaml
+++ b/cmd/master_node/config.yaml
@@ -4,7 +4,7 @@ verbosity: "trace"
 traceOutputFolder: "data"
 placementPolicy: "kubernetes"
 persistence: true
-reconstruct: false
+reconstruct: true
 
 profiler:
   enable: true
