--- a/cmd/master_node/config_cluster.yaml
+++ b/cmd/master_node/config_cluster.yaml
@@ -4,8 +4,7 @@ verbosity: "trace"
 traceOutputFolder: "data"
 placementPolicy: "random"
 persistence: true
-reconstruct: false
-
+reconstruct: true
 
 profiler:
   enable: true
