Worker node failure scenario
Signed-off-by: Lazar Cvetković <l.cvetkovic.997@gmail.com>

--- a/cmd/master_node/config.yaml
+++ b/cmd/master_node/config.yaml
@@ -3,8 +3,8 @@ portRegistration: "9091"
 verbosity: "trace"
 traceOutputFolder: "data"
 placementPolicy: "kubernetes"
-persistence: true
-reconstruct: true
+persistence: false
+reconstruct: false
 
 profiler:
   enable: true
