--- a/cmd/master_node/config.yaml
+++ b/cmd/master_node/config.yaml
@@ -2,7 +2,7 @@ port: "9090"
 portRegistration: "9091"
 verbosity: "trace"
 traceOutputFolder: "data"
-placementPolicy: "kubernetes"
+placementPolicy: "random"
 persistence: false
 reconstruct: false
 
