--- a/cmd/worker_node/config.yaml
+++ b/cmd/worker_node/config.yaml
@@ -2,6 +2,7 @@ controlPlaneIp: "localhost"
 controlPlanePort: "9090"
 port: "10010"
 verbosity: "trace"
+criType: "containerd"
 criPath: "/run/containerd/containerd.sock"
 cniConfigPath: "configs/cni.conf"
 prefetchImage: true
