--- a/cmd/worker_node/config_cluster.yaml
+++ b/cmd/worker_node/config_cluster.yaml
@@ -2,6 +2,7 @@ controlPlaneIp: "10.0.1.2"
 controlPlanePort: "9090"
 port: "10010"
 verbosity: "trace"
+criType: "containerd"
 criPath: "/run/containerd/containerd.sock"
 cniConfigPath: "../../configs/cni.conf"
 prefetchImage: false
