--- a/cmd/data_plane/config.yaml
+++ b/cmd/data_plane/config.yaml
@@ -4,4 +4,4 @@ portProxy: "8080"
 portGRPC: "8081"
 verbosity: "trace"
 traceOutputFolder: "data"
-loadBalancingPolicy: "knative"
+loadBalancingPolicy: "random"
