Linux and rootfs on LFS
Signed-off-by: Lazar Cvetković <l.cvetkovic.997@gmail.com>

--- a/cmd/master_node/config_cluster.yaml
+++ b/cmd/master_node/config_cluster.yaml
@@ -3,11 +3,11 @@ portRegistration: "9091"
 verbosity: "trace"
 traceOutputFolder: "data"
 placementPolicy: "random"
-persistence: true
-reconstruct: true
+persistence: false
+reconstruct: false
 
 profiler:
-  enable: true
+  enable: false
   mutex: false
 
 redis:
