--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ data/*
 scripts/__pycache__/
 
 cmd/test
+
+# This is not to allow non-explicit updates to Linux kernel image and Rootfs image
+configs/firecracker/rootfs.ext4
+configs/firecracker/vmlinux.bin
