TAP device ARP entry
Signed-off-by: Lazar Cvetković <l.cvetkovic.997@gmail.com>

--- a/cmd/worker_node/config.yaml
+++ b/cmd/worker_node/config.yaml
@@ -11,3 +11,4 @@ prefetchImage: true
 firecrackerKernel: "configs/firecracker/vmlinux.bin"
 firecrackerFileSystem: "configs/firecracker/rootfs.ext4"
 firecrackerIPPrefix: "169.254"
+firecrackerVMDebugMode: false
