--- a/cmd/worker_node/config_cluster.yaml
+++ b/cmd/worker_node/config_cluster.yaml
@@ -6,7 +6,7 @@ verbosity: "trace"
 criType: "firecracker"
 criPath: "/run/containerd/containerd.sock"
 cniConfigPath: "configs/cni.conf"
-prefetchImage: true
+prefetchImage: false
 
 firecrackerKernel: "configs/firecracker/vmlinux.bin"
 firecrackerFileSystem: "configs/firecracker/rootfs.ext4"
