Linux kernel upgrade to v5.10
Signed-off-by: Lazar Cvetković <l.cvetkovic.997@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,4 @@ cmd/test
 # This is not to allow non-explicit updates to Linux kernel image and Rootfs image
 configs/firecracker/app
 configs/firecracker/rootfs.ext4
-configs/firecracker/vmlinux.bin
+configs/firecracker/vmlinux*
