--- a/cmd/worker_node/config.yaml
+++ b/cmd/worker_node/config.yaml
@@ -8,7 +8,7 @@ criPath: "/run/containerd/containerd.sock"
 cniConfigPath: "configs/cni.conf"
 prefetchImage: false
 
-firecrackerKernel: "configs/firecracker/vmlinux.bin"
+firecrackerKernel: "configs/firecracker/vmlinux-5.10.bin"
 firecrackerFileSystem: "configs/firecracker/rootfs.ext4"
 firecrackerIPPrefix: "169.254"
 firecrackerVMDebugMode: false
