Add deactivation of workers and dataplanes in config.yaml

--- a/cmd/master_node/config.yaml
+++ b/cmd/master_node/config.yaml
@@ -6,6 +6,9 @@ placementPolicy: "random"
 persistence: false
 reconstruct: false
 
+removeWorkerNode: true
+removeDataplane: true
+
 profiler:
   enable: false
   mutex: false
