--- a/cmd/master_node/config_cluster.yaml
+++ b/cmd/master_node/config_cluster.yaml
@@ -6,6 +6,9 @@ placementPolicy: "random"
 persistence: false
 reconstruct: false
 
+removeWorkerNode: false
+removeDataplane: false
+
 profiler:
   enable: false
   mutex: false
