--- a/cmd/master_node/config_cluster.yaml
+++ b/cmd/master_node/config_cluster.yaml
@@ -9,6 +9,8 @@ reconstruct: false
 removeWorkerNode: false
 removeDataplane: false
 
+traceCreation: false
+
 profiler:
   enable: false
   mutex: false
