Snapshotting and interface restructuring
Signed-off-by: Lazar Cvetković <l.cvetkovic.997@gmail.com>

--- a/cmd/worker_node/config.yaml
+++ b/cmd/worker_node/config.yaml
@@ -12,3 +12,4 @@ firecrackerKernel: "configs/firecracker/vmlinux-6.1.bin"
 firecrackerFileSystem: "configs/firecracker/rootfs.ext4"
 firecrackerIPPrefix: "169.254"
 firecrackerVMDebugMode: false
+firecrackerUseSnapshots: true
