Tiny improvements in code

--- a/cmd/master_node/config.yaml
+++ b/cmd/master_node/config.yaml
@@ -6,8 +6,8 @@ placementPolicy: "random"
 persistence: false
 reconstruct: false
 
-removeWorkerNode: true
-removeDataplane: true
+removeWorkerNode: false
+removeDataplane: false
 
 traceCreation: true
 
