Networking fixed, but with performance penalty
Signed-off-by: Lazar Cvetković <l.cvetkovic.997@gmail.com>

--- a/cmd/worker_node/config.yaml
+++ b/cmd/worker_node/config.yaml
@@ -10,6 +10,7 @@ prefetchImage: false
 
 firecrackerKernel: "configs/firecracker/vmlinux-4.14.bin"
 firecrackerFileSystem: "configs/firecracker/rootfs.ext4"
-firecrackerIPPrefix: "169.254"
+firecrackerInternalIPPrefix: "10"
+firecrackerExposedIPPrefix: "192.254"
 firecrackerVMDebugMode: false
 firecrackerUseSnapshots: true
