--- a/cmd/worker_node/config_cluster.yaml
+++ b/cmd/worker_node/config_cluster.yaml
@@ -10,6 +10,7 @@ prefetchImage: false
 
 firecrackerKernel: "configs/firecracker/vmlinux-4.14.bin"
 firecrackerFileSystem: "configs/firecracker/rootfs.ext4"
-firecrackerIPPrefix: "169.254"
+firecrackerInternalIPPrefix: "10"
+firecrackerExposedIPPrefix: "192.254"
 firecrackerVMDebugMode: false
 firecrackerUseSnapshots: true
