--- a/cmd/worker_node/config.yaml
+++ b/cmd/worker_node/config.yaml
@@ -3,7 +3,7 @@ controlPlaneIp: "localhost"
 controlPlanePort: "9090"
 port: "10010"
 verbosity: "trace"
-criType: "containerd"
+criType: "firecracker"
 criPath: "/run/containerd/containerd.sock"
 cniConfigPath: "configs/cni.conf"
 prefetchImage: false
