Scripts for systemd services
Signed-off-by: Lazar Cvetković <l.cvetkovic.997@gmail.com>

--- a/scripts/systemd/worker_node.service
+++ b/scripts/systemd/worker_node.service
@@ -4,6 +4,7 @@ After=multi-user.target
 [Service]
 Type=simple
 Restart=always
+Environment="PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin:/usr/local/go/bin:/usr/local/bin/firecracker"
 ExecStart=/cluster_manager/cmd/worker_node/main --configPath /cluster_manager/cmd/worker_node/config_cluster.yaml
 [Install]
 WantedBy=multi-user.target
