Placement policy atomic fix
Signed-off-by: Lazar Cvetković <l.cvetkovic.997@gmail.com>

--- a/cmd/master_node/config_cluster.yaml
+++ b/cmd/master_node/config_cluster.yaml
@@ -2,7 +2,7 @@ port: "9090"
 portRegistration: "9091"
 verbosity: "trace"
 traceOutputFolder: "data"
-placementPolicy: "random"
+placementPolicy: "round-robin"
 persistence: false
 reconstruct: false
 
