Network error printing
Signed-off-by: Lazar Cvetković <l.cvetkovic.997@gmail.com>

--- a/cmd/master_node/config.yaml
+++ b/cmd/master_node/config.yaml
@@ -10,7 +10,7 @@ removeWorkerNode: false
 removeDataplane: false
 
 traceCreation: true
-precreateSnapshots: true
+precreateSnapshots: false
 
 profiler:
   enable: false
