--- a/cmd/master_node/config_cluster.yaml
+++ b/cmd/master_node/config_cluster.yaml
@@ -10,7 +10,7 @@ removeWorkerNode: false
 removeDataplane: false
 
 traceCreation: false
-precreateSnapshots: true
+precreateSnapshots: false
 
 profiler:
   enable: false
