Mock and test fixing
Signed-off-by: Lazar Cvetković <l.cvetkovic.997@gmail.com>

--- a/cmd/worker_node/config_cluster.yaml
+++ b/cmd/worker_node/config_cluster.yaml
@@ -13,4 +13,4 @@ firecrackerFileSystem: "/cluster_manager/configs/firecracker/rootfs.ext4"
 firecrackerInternalIPPrefix: "100"
 firecrackerExposedIPPrefix: "192.254"
 firecrackerVMDebugMode: false
-firecrackerUseSnapshots: false
+firecrackerUseSnapshots: true
