Redirected systemd output
Signed-off-by: Lazar Cvetković <l.cvetkovic.997@gmail.com>

--- a/cmd/data_plane/config_cluster.yaml
+++ b/cmd/data_plane/config_cluster.yaml
@@ -4,5 +4,5 @@ controlPlanePort: "9090"
 portProxy: "8080"
 portGRPC: "8081"
 verbosity: "trace"
-traceOutputFolder: "data"
+traceOutputFolder: "~/"
 loadBalancingPolicy: "random"
