--- a/cmd/master_node/config_cluster.yaml
+++ b/cmd/master_node/config_cluster.yaml
@@ -1,7 +1,7 @@
 port: "9090"
 portRegistration: "9091"
 verbosity: "trace"
-traceOutputFolder: "data"
+traceOutputFolder: "~/"
 placementPolicy: "random"
 persistence: false
 reconstruct: false
