Trace output folder fix
Signed-off-by: Lazar Cvetković <l.cvetkovic.997@gmail.com>

--- a/cmd/master_node/config_cluster.yaml
+++ b/cmd/master_node/config_cluster.yaml
@@ -1,7 +1,7 @@
 port: "9090"
 portRegistration: "9091"
 verbosity: "trace"
-traceOutputFolder: "~/"
+traceOutputFolder: "data"
 placementPolicy: "random"
 persistence: false
 reconstruct: false
