--- a/cmd/worker_node/config_cluster.yaml
+++ b/cmd/worker_node/config_cluster.yaml
@@ -6,7 +6,7 @@ verbosity: "trace"
 criType: "containerd"
 criPath: "/run/containerd/containerd.sock"
 cniConfigPath: "/cluster_manager/configs/cni.conf"
-prefetchImage: false
+prefetchImage: true
 
 firecrackerKernel: "/cluster_manager/configs/firecracker/vmlinux-4.14.bin"
 firecrackerFileSystem: "/cluster_manager/configs/firecracker/rootfs.ext4"
