New policies configuration
Signed-off-by: Lazar Cvetković <l.cvetkovic.997@gmail.com>

--- a/cmd/data_plane/config_cluster.yaml
+++ b/cmd/data_plane/config_cluster.yaml
@@ -5,4 +5,4 @@ portProxy: "8080"
 portGRPC: "8081"
 verbosity: "trace"
 traceOutputFolder: "data"
-loadBalancingPolicy: "random"
+loadBalancingPolicy: "knative"
