--- a/cmd/master_node/config_cluster.yaml
+++ b/cmd/master_node/config_cluster.yaml
@@ -1,10 +1,10 @@
 port: "9090"
 portRegistration: "9091"
-verbosity: "trace"
+verbosity: "debug"
 traceOutputFolder: "data"
 placementPolicy: "random"
-persistence: false
-reconstruct: false
+persistence: true
+reconstruct: true
 
 removeWorkerNode: false
 removeDataplane: false
