--- a/cmd/master_node/config_cluster.yaml
+++ b/cmd/master_node/config_cluster.yaml
@@ -3,8 +3,8 @@ portRegistration: "9091"
 verbosity: "debug"
 traceOutputFolder: "data"
 placementPolicy: "random"
-persistence: false
-reconstruct: false
+persistence: true
+reconstruct: true
 
 removeWorkerNode: false
 removeDataplane: false
