--- a/scripts/systemd/data_plane.service
+++ b/scripts/systemd/data_plane.service
@@ -4,7 +4,7 @@ After=multi-user.target
 [Service]
 Type=simple
 Restart=always
-ExecStart=/cluster_manager/cmd/data_plane/main --configPath /cluster_manager/cmd/data_plane/config_cluster.yaml
+ExecStart=/cluster_manager/cmd/data_plane/main --config /cluster_manager/cmd/data_plane/config_cluster.yaml
 KillSignal=SIGKILL
 [Install]
 WantedBy=multi-user.target
