--- a/cmd/master_node/config_cluster.yaml
+++ b/cmd/master_node/config_cluster.yaml
@@ -1,8 +1,8 @@
 port: "9090"
 portRegistration: "9091"
-verbosity: "debug"
+verbosity: "trace"
 traceOutputFolder: "data"
-placementPolicy: "random"
+placementPolicy: "kubernetes"
 persistence: false
 reconstruct: false
 
@@ -12,7 +12,7 @@ removeDataplane: false
 precreateSnapshots: false
 
 profiler:
-  enable: false
+  enable: true
   mutex: false
 
 redis:
