--- a/cmd/data_plane/config_cluster.yaml
+++ b/cmd/data_plane/config_cluster.yaml
@@ -2,7 +2,9 @@ dataPlaneIp: "dynamic"
 controlPlaneIp: "10.0.1.2"
 controlPlanePort: "9090"
 portProxy: "8080"
+portProxyRead: "8082"
 portGRPC: "8081"
 verbosity: "trace"
 traceOutputFolder: "data"
 loadBalancingPolicy: "knative"
+async: false
