--- a/cmd/worker_node/config.yaml
+++ b/cmd/worker_node/config.yaml
@@ -3,10 +3,10 @@ controlPlaneIp: "localhost"
 controlPlanePort: "9090"
 port: "10010"
 verbosity: "trace"
-criType: "firecracker"
+criType: "containerd"
 criPath: "/run/containerd/containerd.sock"
 cniConfigPath: "configs/cni.conf"
-prefetchImage: false
+prefetchImage: true
 
 firecrackerKernel: "configs/firecracker/vmlinux-4.14.bin"
 firecrackerFileSystem: "configs/firecracker/rootfs.ext4"
