Persist and retry failed requests

--- a/cmd/data_plane/config_cluster.yaml
+++ b/cmd/data_plane/config_cluster.yaml
@@ -8,3 +8,9 @@ verbosity: "trace"
 traceOutputFolder: "data"
 loadBalancingPolicy: "knative"
 async: false
+
+redis:
+  address: "10.0.1.1:6379"
+  password: ""
+  db: 0
+  fullPersistence: false
