--- a/cmd/data_plane/config.yaml
+++ b/cmd/data_plane/config.yaml
@@ -7,4 +7,10 @@ portProxyRead: "8082"
 verbosity: "trace"
 traceOutputFolder: "data"
 loadBalancingPolicy: "random"
-async: true
+async: false
+
+redis:
+  address: "127.0.0.1:6379"
+  password: ""
+  db: 0
+  fullPersistence: false
