--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
           go-version: '1.20'
 
       - name: Build
-        run: go build -v ./...
+        run: go build ./...
 
       - name: Test
         run: |
