--- a/cmd/data_plane/config_cluster.yaml
+++ b/cmd/data_plane/config_cluster.yaml
@@ -8,6 +8,7 @@ verbosity: "trace"
 traceOutputFolder: "data"
 loadBalancingPolicy: "knative"
 async: false
+persistRequests: false
 
 redis:
   address: "10.0.1.1:6379"
