Add async configuration

--- a/cmd/data_plane/config_async.yaml
+++ b/cmd/data_plane/config_async.yaml
@@ -7,7 +7,7 @@ portProxyRead: "8082"
 verbosity: "trace"
 traceOutputFolder: "data"
 loadBalancingPolicy: "random"
-async: false
+async: true
 persistRequests: false
 numberRetries: 3
 
