--- a/cmd/data_plane/config_async.yaml
+++ b/cmd/data_plane/config_async.yaml
@@ -8,7 +8,7 @@ verbosity: "trace"
 traceOutputFolder: "data"
 loadBalancingPolicy: "random"
 async: true
-persistRequests: false
+persistRequests: true
 numberRetries: 3
 
 redis:
