--- a/cmd/master_node/config.yaml
+++ b/cmd/master_node/config.yaml
@@ -1,8 +1,8 @@
 port: "9090"
 portRegistration: "9091"
-verbosity: "trace"
+verbosity: "debug"
 traceOutputFolder: "data"
-placementPolicy: "kubernetes"
+placementPolicy: "random"
 persistence: false
 reconstruct: false
 
@@ -12,7 +12,7 @@ removeDataplane: false
 precreateSnapshots: false
 
 profiler:
-  enable: true
+  enable: false
   mutex: false
 
 redis:
