Function registration server migration on leadership change
Signed-off-by: Lazar Cvetković <l.cvetkovic.997@gmail.com>

--- a/cmd/master_node/config_r1.yaml
+++ b/cmd/master_node/config_r1.yaml
@@ -1,7 +1,7 @@
 port: "9090"
 replicas: "127.0.0.1:10000,127.0.0.1:10001"
 portRegistration: "9091"
-verbosity: "trace"
+verbosity: "debug"
 traceOutputFolder: "data"
 placementPolicy: "random"
 persistence: false
