State reconstruction on failover
Signed-off-by: Lazar Cvetković <l.cvetkovic.997@gmail.com>

--- a/cmd/master_node/config_r1.yaml
+++ b/cmd/master_node/config_r1.yaml
@@ -4,8 +4,8 @@ portRegistration: "9091"
 verbosity: "debug"
 traceOutputFolder: "data"
 placementPolicy: "random"
-persistence: false
-reconstruct: false
+persistence: true
+reconstruct: true
 
 removeWorkerNode: false
 removeDataplane: false
