Leader election eventing
gRPC connection managers pick first address that works

Leadership change event handlers bugfixing

Control plane addresses for data planes and worker nodes

Registration server termination signals

Signed-off-by: Lazar Cvetković <l.cvetkovic.997@gmail.com>

--- a/cmd/data_plane/config_async.yaml
+++ b/cmd/data_plane/config_async.yaml
@@ -1,6 +1,5 @@
 dataPlaneIp: "127.0.0.1"
-controlPlaneIp: "localhost"
-controlPlanePort: "9090"
+controlPlaneAddress: "localhost:9090"
 portProxy: "8080"
 portGRPC: "8081"
 portProxyRead: "8082"
