--- a/cmd/data_plane/config.yaml
+++ b/cmd/data_plane/config.yaml
@@ -1,6 +1,5 @@
 dataPlaneIp: "127.0.0.1"
-controlPlaneIp: "localhost"
-controlPlanePort: "9090"
+controlPlaneAddress: "127.0.0.1:9090,127.0.0.1:10000,127.0.0.1:10001"
 portProxy: "8080"
 portGRPC: "8081"
 portProxyRead: "8082"
