--- a/cmd/data_plane/config_cluster.yaml
+++ b/cmd/data_plane/config_cluster.yaml
@@ -1,6 +1,5 @@
 dataPlaneIp: "dynamic"
-controlPlaneIp: "10.0.1.2"
-controlPlanePort: "9090"
+controlPlaneAddress: "10.0.1.2:9090"
 portProxy: "8080"
 portProxyRead: "8082"
 portGRPC: "8081"
