Addressing Francois comments
Signed-off-by: Lazar Cvetković <l.cvetkovic.997@gmail.com>

--- a/cmd/master_node/config.yaml
+++ b/cmd/master_node/config.yaml
@@ -4,8 +4,8 @@ portRegistration: "9091"
 verbosity: "debug"
 traceOutputFolder: "data"
 placementPolicy: "random"
-persistence: true
-reconstruct: true
+persistence: false
+reconstruct: false
 
 removeWorkerNode: false
 removeDataplane: false
