HAProxy interface with tests
Signed-off-by: Lazar Cvetković <l.cvetkovic.997@gmail.com>

--- a/configs/haproxy.cfg
+++ b/configs/haproxy.cfg
@@ -31,5 +31,5 @@ backend dirigent_data_planes
     option httpchk GET /health
     http-check expect status 200
     mode tcp
-    balance roundrobin
+    balance hdr(host)
         server dp_1 127.0.0.1:8080 check
