--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,6 +20,9 @@ jobs:
         with:
           go-version: '1.20'
 
+      - name: Configure HAProxy
+        run: sudo apt-get update && sudo apt-get install haproxy && sudo cp ./configs/haproxy.cfg /etc/haproxy/haproxy.cfg
+
       - name: Build
         run: go build ./...
 
