Registration server pointing to LB or DP directly
Heartbeat logging bugfixes

Signed-off-by: Lazar Cvetković <l.cvetkovic.997@gmail.com>

--- a/cmd/master_node/config.yaml
+++ b/cmd/master_node/config.yaml
@@ -7,6 +7,8 @@ placementPolicy: "random"
 persistence: false
 reconstruct: false
 
+loadBalancerAddress: ""
+
 removeWorkerNode: false
 removeDataplane: false
 
