--- a/configs/haproxy.cfg
+++ b/configs/haproxy.cfg
@@ -22,14 +22,14 @@ defaults
     timeout check           10s
 
 frontend dirigent
-    bind *:8080
-    mode tcp
+    bind *:8079
+    mode http
     option tcplog
     default_backend dirigent_data_planes
 
 backend dirigent_data_planes
     option httpchk GET /health
     http-check expect status 200
-    mode tcp
+    mode http
     balance hdr(host)
-        server dp_1 127.0.0.1:8080 check
+    #server dp_1 127.0.0.1:8080 check
