--- a/cmd/master_node/config_cluster.yaml
+++ b/cmd/master_node/config_cluster.yaml
@@ -7,6 +7,8 @@ placementPolicy: "random"
 persistence: false
 reconstruct: false
 
+loadBalancerAddress: ""
+
 removeWorkerNode: false
 removeDataplane: false
 
