--- a/cmd/master_node/config_raft_1.yaml
+++ b/cmd/master_node/config_raft_1.yaml
@@ -7,6 +7,8 @@ placementPolicy: "random"
 persistence: true
 reconstruct: true
 
+loadBalancerAddress: ""
+
 removeWorkerNode: false
 removeDataplane: false
 
