--- a/cmd/master_node/config_cluster_raft_2.yaml
+++ b/cmd/master_node/config_cluster_raft_2.yaml
@@ -8,7 +8,7 @@ persistence: true
 reconstruct: true
 
 # to use HAProxy load balancer put 10.0.1.254:8079, otherwise leave blank
-loadBalancerAddress: ""
+loadBalancerAddress: "10.0.1.254:8079"
 
 removeWorkerNode: false
 removeDataplane: false
