--- a/cmd/master_node/config_cluster_raft_1.yaml
+++ b/cmd/master_node/config_cluster_raft_1.yaml
@@ -17,7 +17,9 @@ profiler:
   mutex: false
 
 redis:
-  address: "10.0.1.1:6379"
+  address: "10.0.1.2:6379"
+  dockerAddress: "10.0.1.2:6379"
+  replicas: "10.0.1.3:6379,10.0.1.4:6379"
   password: ""
   db: 0
   fullPersistence: false
