--- a/configs/haproxy.cfg
+++ b/configs/haproxy.cfg
@@ -3,6 +3,7 @@ global
     log /dev/log local1 notice
     daemon
     stats socket /run/haproxy/admin.sock mode 660 level admin
+    maxconn 60000
 
 defaults
     mode                    http
@@ -14,14 +15,14 @@ defaults
     option                  redispatch
 
     retries                 30
-    timeout connect         5s
+    timeout connect         60s
 
-    timeout http-request    10s
-    timeout queue           20s
-    timeout client          20s
-    timeout server          20s
-    timeout http-keep-alive 10s
-    timeout check           10s
+    timeout http-request    60s
+    timeout queue           60s
+    timeout client          60s
+    timeout server          60s
+    timeout http-keep-alive 60s
+    timeout check           60s
 
 frontend dirigent
     bind *:8079
