Registration server load balancer
Signed-off-by: Lazar Cvetković <l.cvetkovic.997@gmail.com>

--- a/cmd/master_node/config_cluster.yaml
+++ b/cmd/master_node/config_cluster.yaml
@@ -1,6 +1,6 @@
 port: "9090"
 replicas: ""
-portRegistration: "9091"
+registrationServer: "10.0.1.2:9091"
 verbosity: "debug"
 traceOutputFolder: "data"
 placementPolicy: "random"
