--- a/configs/haproxy.cfg
+++ b/configs/haproxy.cfg
@@ -24,15 +24,26 @@ defaults
     timeout http-keep-alive 60s
     timeout check           60s
 
-frontend dirigent
+frontend dirigent_data_planes
     bind *:8079
     mode http
     option tcplog
     default_backend dirigent_data_planes
+
+frontend dirigent_registration_server
+    bind *:9092
+    mode http
+    option tcplog
+    default_backend dirigent_registration_server
 
 backend dirigent_data_planes
     option httpchk GET /health
     http-check expect status 200
     mode http
     balance hdr(host)
-    #server dp_1 127.0.0.1:8080 check
+
+backend dirigent_registration_server
+    option httpchk GET /health
+    http-check expect status 200
+    mode http
+    balance hdr(host)
