--- a/cmd/master_node/config.yaml
+++ b/cmd/master_node/config.yaml
@@ -1,6 +1,6 @@
 port: "9090"
 replicas: ""
-portRegistration: "9091"
+registrationServer: "127.0.0.1:9091"
 verbosity: "debug"
 traceOutputFolder: "data"
 placementPolicy: "random"
