--- a/cmd/master_node/config_cluster_raft_1.yaml
+++ b/cmd/master_node/config_cluster_raft_1.yaml
@@ -1,6 +1,6 @@
 port: "9090"
 replicas: "10.0.1.3:10000,10.0.1.4:10001"
-portRegistration: "9091"
+registrationServer: "10.0.1.2:9091"
 verbosity: "debug"
 traceOutputFolder: "data"
 placementPolicy: "random"
