--- a/cmd/master_node/config_cluster_raft_2.yaml
+++ b/cmd/master_node/config_cluster_raft_2.yaml
@@ -1,6 +1,6 @@
 port: "10000"
 replicas: "10.0.1.2:9090,10.0.1.4:10001"
-portRegistration: "9091"
+registrationServer: "10.0.1.3:9091"
 verbosity: "debug"
 traceOutputFolder: "data"
 placementPolicy: "random"
