--- a/cmd/master_node/config_raft_3.yaml
+++ b/cmd/master_node/config_raft_3.yaml
@@ -1,6 +1,6 @@
 port: "10001"
 replicas: "127.0.0.1:9090,127.0.0.1:10000"
-portRegistration: "9091"
+registrationServer: "127.0.0.1:9091"
 verbosity: "debug"
 traceOutputFolder: "data"
 placementPolicy: "random"
