--- a/cmd/master_node/config.yaml
+++ b/cmd/master_node/config.yaml
@@ -1,6 +1,7 @@
 port: "9090"
 replicas: ""
 registrationServer: "127.0.0.1:9091"
+registrationServerReplicas: ""
 verbosity: "debug"
 traceOutputFolder: "data"
 placementPolicy: "random"
