--- a/cmd/master_node/config_cluster.yaml
+++ b/cmd/master_node/config_cluster.yaml
@@ -1,6 +1,7 @@
 port: "9090"
 replicas: ""
 registrationServer: "10.0.1.2:9091"
+registrationServerReplicas: ""
 verbosity: "debug"
 traceOutputFolder: "data"
 placementPolicy: "random"
