--- a/cmd/master_node/config_cluster_raft_3.yaml
+++ b/cmd/master_node/config_cluster_raft_3.yaml
@@ -1,6 +1,7 @@
 port: "10001"
 replicas: "10.0.1.2:9090,10.0.1.3:10000"
 registrationServer: "10.0.1.4:9091"
+registrationServerReplicas: "10.0.1.2:9091,10.0.1.3:9091"
 verbosity: "debug"
 traceOutputFolder: "data"
 placementPolicy: "random"
