Enabling 1CP setup persistence
Signed-off-by: Lazar Cvetković <l.cvetkovic.997@gmail.com>

--- a/cmd/master_node/config_cluster.yaml
+++ b/cmd/master_node/config_cluster.yaml
@@ -5,8 +5,8 @@ registrationServerReplicas: ""
 verbosity: "debug"
 traceOutputFolder: "data"
 placementPolicy: "random"
-persistence: false
-reconstruct: false
+persistence: true
+reconstruct: true
 
 # to use HAProxy load balancer put 10.0.1.254:8079, otherwise leave blank
 loadBalancerAddress: "10.0.1.254:8079"
@@ -25,4 +25,4 @@ redis:
   replicas: ""
   password: ""
   db: 0
-  fullPersistence: false
+  fullPersistence: true
