Change to Firecracker
Signed-off-by: Lazar Cvetković <l.cvetkovic.997@gmail.com>

--- a/configs/haproxy.cfg
+++ b/configs/haproxy.cfg
@@ -41,9 +41,11 @@ backend dirigent_data_planes
     http-check expect status 200
     mode http
     balance hdr(host)
+    http-reuse always
 
 backend dirigent_registration_server
     option httpchk GET /health
     http-check expect status 200
     mode http
     balance hdr(host)
+    http-reuse always
