Updated fake worker node scripts
Signed-off-by: Lazar Cvetković <l.cvetkovic.997@gmail.com>

--- a/scripts/setup.cfg
+++ b/scripts/setup.cfg
@@ -2,3 +2,7 @@
 CONTROL_PLANE_REPLICAS=1
 # Do not change for now - FEATURE TO BE IMPLEMENTED
 DATA_PLANE_REPLICAS=1
+
+# Fake worker node experiment - enable = 1; disable = 0
+FAKE_WORKER_MODE=1
+DAEMONS_PER_NODE=1
