--- a/cmd/master_node/config.yaml
+++ b/cmd/master_node/config.yaml
@@ -22,6 +22,7 @@ profiler:
 
 redis:
   address: "127.0.0.1:6379"
+  dockerAddress: "127.0.0.1:6379"
   password: ""
   db: 0
-  fullPersistence: false
+  fullPersistence: true
