--- a/cmd/master_node/config_cluster.yaml
+++ b/cmd/master_node/config_cluster.yaml
@@ -2,7 +2,7 @@ port: "9090"
 replicas: ""
 registrationServer: "10.0.1.2:9091"
 registrationServerReplicas: ""
-verbosity: "debug"
+verbosity: "trace"
 traceOutputFolder: "data"
 placementPolicy: "random"
 persistence: true
