--- a/cmd/master_node/config_cluster_raft_2.yaml
+++ b/cmd/master_node/config_cluster_raft_2.yaml
@@ -2,7 +2,7 @@ port: "10000"
 replicas: "10.0.1.2:9090,10.0.1.4:10001"
 registrationServer: "10.0.1.3:9091"
 registrationServerReplicas: "10.0.1.2:9091,10.0.1.4:9091"
-verbosity: "debug"
+verbosity: "trace"
 traceOutputFolder: "data"
 placementPolicy: "random"
 persistence: true
