--- a/cmd/master_node/config_raft_2.yaml
+++ b/cmd/master_node/config_raft_2.yaml
@@ -2,7 +2,7 @@ port: "10000"
 replicas: "127.0.0.1:9090,127.0.0.1:10001"
 registrationServer: "127.0.0.1:14091"
 registrationServerReplicas: "127.0.0.1:13091,127.0.0.1:15091"
-verbosity: "debug"
+verbosity: "trace"
 traceOutputFolder: "data"
 placementPolicy: "random"
 persistence: true
