--- a/cmd/master_node/config_raft_3.yaml
+++ b/cmd/master_node/config_raft_3.yaml
@@ -22,7 +22,7 @@ profiler:
 
 redis:
   address: "127.0.0.1:6382"
-  dockerAddress: "redis_3:6379"
+  addressFromDockerNetwork: "redis_3:6379"
   replicas: "127.0.0.1:6380,127.0.0.1:6381"
   password: ""
   db: 0
