--- a/cmd/master_node/config_cluster.yaml
+++ b/cmd/master_node/config_cluster.yaml
@@ -22,7 +22,7 @@ profiler:
 
 redis:
   address: "10.0.1.2:6379"
-  dockerAddress: "10.0.1.2:6379"
+  addressFromDockerNetwork: "10.0.1.2:6379"
   replicas: ""
   password: ""
   db: 0
