--- a/cmd/master_node/config_raft_1.yaml
+++ b/cmd/master_node/config_raft_1.yaml
@@ -22,7 +22,7 @@ profiler:
 
 redis:
   address: "127.0.0.1:6380"
-  dockerAddress: "redis_1:6379"
+  addressFromDockerNetwork: "redis_1:6379"
   replicas: "127.0.0.1:6381,127.0.0.1:6382"
   password: ""
   db: 0
