Make predictive autoscaler run with new internal api

--- a/cmd/master_node/config_cluster.yaml
+++ b/cmd/master_node/config_cluster.yaml
@@ -7,6 +7,7 @@ traceOutputFolder: "data"
 placementPolicy: "random"
 persistence: false
 reconstruct: false
+autoscaler: "default"
 
 # to use HAProxy load balancer put 10.0.1.254:8079, otherwise leave blank
 loadBalancerAddress: "10.0.1.254:8079"
