--- a/cmd/master_node/config.yaml
+++ b/cmd/master_node/config.yaml
@@ -7,6 +7,7 @@ traceOutputFolder: "data"
 placementPolicy: "random"
 persistence: false
 reconstruct: false
+autoscaler: "predictive"
 
 # to use HAProxy load balancer put 127.0.0.1:8079, otherwise leave blank
 loadBalancerAddress: "127.0.0.1:8079"
