Patch autoscaling configuration dynamically
Signed-off-by: Lazar Cvetković <l.cvetkovic.997@gmail.com>

--- a/cmd/master_node/config_cluster.yaml
+++ b/cmd/master_node/config_cluster.yaml
@@ -11,6 +11,7 @@ autoscaler: "default"
 
 # to use HAProxy load balancer put 10.0.1.254:8079, otherwise leave blank
 loadBalancerAddress: "10.0.1.254:8079"
+autoscalingPeriod: "2s"
 
 removeWorkerNode: false
 removeDataplane: false
