--- a/cmd/master_node/config.yaml
+++ b/cmd/master_node/config.yaml
@@ -11,6 +11,7 @@ autoscaler: "predictive"
 
 # to use HAProxy load balancer put 127.0.0.1:8079, otherwise leave blank
 loadBalancerAddress: "127.0.0.1:8079"
+autoscalingPeriod: "2s"
 
 removeWorkerNode: false
 removeDataplane: false
