--- a/cmd/master_node/config_cluster_raft_1.yaml
+++ b/cmd/master_node/config_cluster_raft_1.yaml
@@ -11,6 +11,7 @@ autoscaler: "default"
 
 # to use HAProxy load balancer put 10.0.1.254:8079, otherwise leave blank
 loadBalancerAddress: "10.0.1.254:8079"
+autoscalingPeriod: "2s"
 
 removeWorkerNode: false
 removeDataplane: false
