Adding header to async response and code refactoring
Optimizing data structures

Signed-off-by: Lazar Cvetković <l.cvetkovic.997@gmail.com>

--- a/cmd/data_plane/config_async.yaml
+++ b/cmd/data_plane/config_async.yaml
@@ -7,7 +7,7 @@ verbosity: "trace"
 traceOutputFolder: "data"
 loadBalancingPolicy: "random"
 async: true
-persistRequests: true
+persistRequests: false
 numberRetries: 3
 
 redis:
