--- a/scripts/setup.cfg
+++ b/scripts/setup.cfg
@@ -1,7 +1,9 @@
 # Core component replicas (default: 1, for high-availability use 3)
 CONTROL_PLANE_REPLICAS=1
-# Do not change for now - FEATURE TO BE IMPLEMENTED
 DATA_PLANE_REPLICAS=1
+
+# Data plane configuration
+ASYNC_DP_MODE=1
 
 # Fake worker node experiment - enable = 1; disable = 0
 FAKE_WORKER_MODE=0
