--- a/cmd/data_plane/config_cluster_async.yaml
+++ b/cmd/data_plane/config_cluster_async.yaml
@@ -11,7 +11,8 @@ persistRequests: true
 numberRetries: 3
 
 redis:
-  address: "10.0.1.1:6379"
+  address: "10.0.1.2:6379"
+  replicas: ""
   password: ""
   db: 0
   fullPersistence: false
