Wrapped http.Request serialization
Signed-off-by: Lazar Cvetković <l.cvetkovic.997@gmail.com>

--- a/cmd/data_plane/config_async.yaml
+++ b/cmd/data_plane/config_async.yaml
@@ -7,7 +7,7 @@ verbosity: "trace"
 traceOutputFolder: "data"
 loadBalancingPolicy: "random"
 async: true
-persistRequests: false
+persistRequests: true
 numberRetries: 3
 
 redis:
