Fixes after rebase
Signed-off-by: Lazar Cvetković <l.cvetkovic.997@gmail.com>

--- a/cmd/master_node/config.yaml
+++ b/cmd/master_node/config.yaml
@@ -7,11 +7,11 @@ traceOutputFolder: "data"
 placementPolicy: "random"
 persistence: false
 reconstruct: false
-autoscaler: "predictive"
+autoscaler: "default"
+autoscalingPeriod: "2s"
 
 # to use HAProxy load balancer put 127.0.0.1:8079, otherwise leave blank
 loadBalancerAddress: "127.0.0.1:8079"
-autoscalingPeriod: "2s"
 
 removeWorkerNode: false
 removeDataplane: false
